--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "1.0.0",
     "gulp-sass": "^2.1.0",
+    "gulp-string-replace": "^0.4.0",
+    "run-sequence": "^1.2.2",
     "vinyl-ftp": "^0.5.0"
   }
 }
