add onclick event to ps4 button

--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,4 @@ owner:
   gitlab: https://gitlab.com/PrabuDzak
   linkedin: https://www.linkedin.com/in/prabu-dzaky-47a1a4127/
   steam: http://steamcommunity.com/id/TheRealBoobs/
+  resume: https://docs.google.com/document/d/1dFwhY1mt5E6mwV1-Nvw3lafdWPy4y0LdTPYqrV_H62Y/pub
