fix: social link

--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ keyword: "Prabu, Dzaky, Yoga, Pradana, PrabuDzak, Prabu Dzaky"
 owner:
   name: Prabu Dzaky
   email: prabu.dyp@gmail.com
-  twitter: twitter.com/prabudzak
-  facebook: fb.com/prabudzak
-  github: github.com/prabudzak
+  twitter: http://twitter.com/prabudzak
+  facebook: http://fb.com/prabudzak
+  github: http://github.com/prabudzak
   gitlab: https://gitlab.com/PrabuDzak
   linkedin: https://www.linkedin.com/in/prabu-dzaky-47a1a4127/
   steam: http://steamcommunity.com/id/TheRealBoobs/
